# FruityEngine

./: CMakeLists.txt
Docs/: Property.md
Engine/: CMakeLists.txt
Engine/shaders/: basic.frag  basic.vert
Engine/src/core/: App.cpp  App.h  FileLoader.h  Timer.cpp  Timer.h  Window.cpp  Window.h
Engine/src/core/FileLoaders/: JSONLoader.cpp  JSONLoader.h  OBJLoader.cpp  OBJLoader.h
Engine/src/game/: GameObject.cpp  GameObject.h  Property.h  PropertyRef.h  Scene.cpp  Scene.h  Script.h
Engine/src/game/GameObjects/: Player.cpp  Player.h
Engine/src/game/Properties/: Camera.cpp  Camera.h  MeshRenderer.cpp  MeshRenderer.h  Transform.cpp  Transform.h
Engine/src/graphics/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
Engine/src/util/: Flags.h  Initialized.h  Observable.h  Registry.h
Game/: CMakeLists.txt
Game/assets/scenes/TestScene/: scene.json
Game/assets/scenes/TestScene/objects/: cube.json  player.json
Game/assets/scenes/TestScene/shaders/: basic.frag  basic.vert
Game/assets/shaders/: basic.frag  basic.vert
Game/src/: PlayerController.cpp  Rotator.cpp  main.cpp
scripts/: run_game_server.sh
